CHATS_SIT/force-app/main/default/objects/Client_Complaint__c.object
<CustomObject>
    <description>CCCAP-15359</description>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>&quot;Complaint” means a verbal or written expression of dissatisfaction by an applicant, adult caretaker, teen parent, or child care provider to a county or the Department that is: (1) significant, meaning not yet resolved and severe enough that resources should be contributed to resolve it immediately, and (2) controllable, meaning the county had the ability to alter the negative event preceding the complaint, but failed to take the necessary steps to prevent it.</inlineHelpText>
        <label>Complaint Body</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint_Status__c</fullName>
        <label>Complaint Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00900</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Types__c</fullName>
        <label>Complaint Types</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00899</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_Complaint_Resolved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complaint Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_County_Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Counties must respond to contact from families and/or child care providers within three (3) business days.</inlineHelpText>
        <label>Initial County Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_County_Transfer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of County Transfer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_Initial_Complaint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Date of Complaint</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Client Complaints</relationshipLabel>
        <relationshipName>Client_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_COUNTY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Client Complaints</relationshipLabel>
        <relationshipName>Client_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Client Complaints</relationshipLabel>
        <relationshipName>Client_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <label>Method of Contact</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>USPS/Fax</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Text Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_who_Provided_Complaint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Person who Provided Complaint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>byPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCCAP-15359 To bypass validation rules from backend</description>
        <label>byPassValidation</label>
        <type>Checkbox</type>
    </fields>
    <label>Client Complaint</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Complaint ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>